Update in index.html and adding error.html

--- a/error.html
+++ b/error.html
@@ -3,9 +3,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Jeffin Manuel Resume</title>
+    <title>ERROR</title>
   </head>
   <body>
-    Coming soon...
+    Something went wrong...I'll be back soon
   </body>
 </html>
