Adding icon and links

--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
 
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Jeffin Manuel Resume</title>
-  </head>
-  <body>
-    Coming soon...
-  </body>
+    <meta charset="UTF-8">
+
+    <title>M Jeffin Manuel</title>
+
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href='http://fonts.googleapis.com/css?family=Fenix|Montserrat|Playfair+Display:700italic,400italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="static/style.css">
+    <script src="http://cdn.polyfill.io/v1/polyfill.min.js"></script>
+
+</head>
+
+<body>
+
+<section class="main-header home">
+
+    <div class="vertical-container">
+
+    	<div class="wrapper clearfix">
+
+	        <header>
+	        	
+		            <h1 id="main-title">M Jeffin Manuel</h1>
+		            <h2 id="main-subtitle">Software Developer</h2>
+	        	
+	        </header>
+
+            <div class="social">
+                <a href="http://github.com/manueljeffin" class="symbol">&#xe236;</a>
+                <a href="http://twitter.com/JeffinManuel" class="symbol">&#xe286;</a>
+                <a href="http://facebook.com/jeffin.manuel" class="symbol">&#xe227;</a>
+                <a href="https://www.linkedin.com/in/m-jeffin-manuel-a2253687/" class="symbol">&#xe252;</a>
+                <a href="https://www.quora.com/profile/Jeffin-Manuel" class="symbol">&#xe268;</a>
+                <a href="skype:manueljeffin?chat" class="symbol">&#xe274;</a>
+                <a href="mailto:manueljeffin@gmail.com" class="symbol">&#xe224;</a>                
+            </div>
+
+		</div>
+
+    </div>
+
+</section>
+
+
+</body>
 </html>
