Updated stack overflow icon

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	        </header>
 
             <div class="social">
+				<a href="https://stackoverflow.com/users/4404129/jeffin-manuel" class="symbol">&#xe281;</a>
                 <a href="http://github.com/manueljeffin" class="symbol">&#xe236;</a>
                 <a href="http://twitter.com/JeffinManuel" class="symbol">&#xe286;</a>
                 <a href="http://facebook.com/jeffin.manuel" class="symbol">&#xe227;</a>
