--- a/error.html
+++ b/error.html
@@ -3,6 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/png" href="static/favicon.png"/>
     <title>ERROR</title>
   </head>
   <body>
