--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
     <meta charset="UTF-8">
 
-    <title>M Jeffin Manuel</title>
-
+    <title>Kasi Raj R</title>
+    <link rel="shortcut icon" type="image/png" href="static/favicon.png"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Fenix|Montserrat|Playfair+Display:700italic,400italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="static/style.css">
@@ -23,20 +23,18 @@
 
 	        <header>
 	        	
-		            <h1 id="main-title">M Jeffin Manuel</h1>
-		            <h2 id="main-subtitle">Software Developer</h2>
+		            <h1 id="main-title">Kasi Raj R</h1>
+		            <h2 id="main-subtitle">Software Development and Testing</h2>
 	        	
 	        </header>
 
             <div class="social">
-				<a href="https://stackoverflow.com/users/4404129/jeffin-manuel" class="symbol">&#xe281;</a>
-                <a href="http://github.com/manueljeffin" class="symbol">&#xe236;</a>
-                <a href="http://twitter.com/JeffinManuel" class="symbol">&#xe286;</a>
-                <a href="http://facebook.com/jeffin.manuel" class="symbol">&#xe227;</a>
-                <a href="https://www.linkedin.com/in/m-jeffin-manuel-a2253687/" class="symbol">&#xe252;</a>
-                <a href="https://www.quora.com/profile/Jeffin-Manuel" class="symbol">&#xe268;</a>
-                <a href="skype:manueljeffin?chat" class="symbol">&#xe274;</a>
-                <a href="mailto:manueljeffin@gmail.com" class="symbol">&#xe224;</a>                
+				<a href="https://stackoverflow.com/users/3529559/kasi-raj-r" class="symbol">&#xe281;</a>
+                <a href="https://twitter.com/kasirajr" class="symbol">&#xe286;</a>
+                <a href="https://www.facebook.com/kasirajr" class="symbol">&#xe227;</a>
+                <a href="https://www.linkedin.com/in/kasi-raj-r-335a74aa/" class="symbol">&#xe252;</a>
+                <a href="skype:kasiraj888?chat" class="symbol">&#xe274;</a>
+                <a href="mailto:kasiraj888@gmail.com" class="symbol">&#xe224;</a>                
             </div>
 
 		</div>
