--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
+
 <head>
 
     <meta charset="UTF-8">
 
     <title>Kasi Raj R</title>
-    <link rel="shortcut icon" type="image/png" href="static/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="static/favicon.png" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href='http://fonts.googleapis.com/css?family=Fenix|Montserrat|Playfair+Display:700italic,400italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Fenix|Montserrat|Playfair+Display:700italic,400italic'
+        rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="static/style.css">
     <script src="http://cdn.polyfill.io/v1/polyfill.min.js"></script>
 
@@ -15,34 +17,35 @@
 
 <body>
 
-<section class="main-header home">
+    <section class="main-header home">
 
-    <div class="vertical-container">
+        <div class="vertical-container">
 
-    	<div class="wrapper clearfix">
+            <div class="wrapper clearfix">
 
-	        <header>
-	        	
-		            <h1 id="main-title">Kasi Raj R</h1>
-		            <h2 id="main-subtitle">Software Development and Testing</h2>
-	        	
-	        </header>
+                <header>
 
-            <div class="social">
-				<a href="https://stackoverflow.com/users/3529559/kasi-raj-r" class="symbol">&#xe281;</a>
-                <a href="https://twitter.com/kasirajr" class="symbol">&#xe286;</a>
-                <a href="https://www.facebook.com/kasirajr" class="symbol">&#xe227;</a>
-                <a href="https://www.linkedin.com/in/kasi-raj-r-335a74aa/" class="symbol">&#xe252;</a>
-                <a href="skype:kasiraj888?chat" class="symbol">&#xe274;</a>
-                <a href="mailto:kasiraj888@gmail.com" class="symbol">&#xe224;</a>                
+                    <h1 id="main-title">Kasi Raj R</h1>
+                    <h2 id="main-subtitle">Software Developer</h2>
+
+                </header>
+
+                <div class="social">
+                    <a href="https://stackoverflow.com/users/3529559/kasi-raj-r" class="symbol">&#xe281;</a>
+                    <a href="https://twitter.com/kasirajr" class="symbol">&#xe286;</a>
+                    <a href="https://www.facebook.com/kasirajr" class="symbol">&#xe227;</a>
+                    <a href="https://www.linkedin.com/in/kasi-raj-r-335a74aa/" class="symbol">&#xe252;</a>
+                    <a href="skype:kasiraj888?chat" class="symbol">&#xe274;</a>
+                    <a href="mailto:kasiraj888@gmail.com" class="symbol">&#xe224;</a>
+                </div>
+
             </div>
 
-		</div>
+        </div>
 
-    </div>
-
-</section>
+    </section>
 
 
 </body>
+
 </html>
