--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <header>
 
                     <h1 id="main-title">Kasi Raj R</h1>
-                    <h2 id="main-subtitle">Software Developer</h2>
+                    <h2 id="main-subtitle">Software Development Engineer in Test</h2>
 
                 </header>
 
