--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <header>
 
                     <h1 id="main-title">Kasi Raj R</h1>
-                    <h2 id="main-subtitle">Software Development Engineer in Test</h2>
+                    <h2 id="main-subtitle">Software Developer</h2>
 
                 </header>
 
@@ -38,7 +38,7 @@
                     <a href="skype:kasiraj888?chat" class="symbol">&#xe274;</a>
                     <a href="mailto:kasiraj888@gmail.com" class="symbol">&#xe224;</a>
                 </div>
-
+                <a href="https://drive.google.com/open?id=1dyRnucS446KiawArp3tRWTF08m32Qt-w" id="resume-link" class="social symbol">resume</a>
             </div>
 
         </div>
