--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <title>Kasi Raj R</title>
     <link rel="shortcut icon" type="image/png" href="static/favicon.png" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href='http://fonts.googleapis.com/css?family=Fenix|Montserrat|Playfair+Display:700italic,400italic'
+    <link href='https://fonts.googleapis.com/css?family=Fenix|Montserrat|Playfair+Display:700italic,400italic'
         rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="static/style.css">
-    <script src="http://cdn.polyfill.io/v1/polyfill.min.js"></script>
+    <script src="https://cdn.polyfill.io/v1/polyfill.min.js"></script>
 
 </head>
 
