--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="skype:kasiraj888?chat" class="symbol">&#xe274;</a>
                     <a href="mailto:kasiraj888@gmail.com" class="symbol">&#xe224;</a>
                 </div>
-                <a href="https://drive.google.com/open?id=1dyRnucS446KiawArp3tRWTF08m32Qt-w" id="resume-link" class="social symbol">resume</a>
+                <a href="https://drive.google.com/open?id=1dyRnucS446KiawArp3tRWTF08m32Qt-w" id="resume-link" class="social symbol">RESUME</a>
             </div>
 
         </div>
