added github profile

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 
                 <div class="social">
                     <a href="https://stackoverflow.com/users/3529559/kasi-raj-r" class="symbol">&#xe281;</a>
-                    <a href="https://twitter.com/kasirajr" class="symbol">&#xe286;</a>
-                    <a href="https://www.facebook.com/kasirajr" class="symbol">&#xe227;</a>
+                    <a href="https://github.com/kasirajr" class="symbol">&#xe236;</a>
                     <a href="https://www.linkedin.com/in/kasi-raj-r-335a74aa/" class="symbol">&#xe252;</a>
                     <a href="skype:kasiraj888?chat" class="symbol">&#xe274;</a>
                     <a href="mailto:kasiraj888@gmail.com" class="symbol">&#xe224;</a>
